add service interdeps